3.0905
 - Mod: Gratch now more granualar for infiltration times when damaged
 - Mod: If planet is abandoned, spies from elsewhere will be set to Idle when ported home.
 - Fix: Removed any possibility of inter-alliance voting.

3.0904:
 - Fix: Removed cronic duplication in starmap API, hopefully reducing lag

3.0903:
 - Fix: Have spies set on propaganda start work immediately.
 - Fix: Stakes no longer go into Members Only Colony Space.
 - Fix: Crater gets cleared if AI is out of space.
 - Fix: Get first 100 spies via prepare_send or fetch that are available.
 - Mod: Oracle of Anid schedules recalculation after a period of work instead of immediately.

3.0902:
 - Add: Jackpot AI
 - Fix: Idle spies that hit max training on check.
 - Fix: Seizing in Neutral Area fails if passed. (Thanks RO)
 - Add: Custom message for upgrades in code.  (so far, just bleeders. Thanks Tower)
 - Fix: No shortcuts via the forbidden zone.
 - Fix: Recalled ships ignore fleet speed.
 - Fix: Snarks splash damage now splash as advertised.

3.0901:
 - API: Spaceport ship filter includes all relevant tasks.
 - Fix: Parliament actually looks at leader's embassy for max members.
 - Mod: Saben, Diablotin, Cult get some timing changes.

3.0900:
 - Fix: Gratch's Gauntlet on repair, checks spies current status.
 - Mod: Redid Political Propaganda as a constant task.
 - Mod: Cult less effective against planets running propaganda campaigns.
 - Mod: Plan sorting is Glyph-Standard-Module Order

3.0899:
 - Mod: Different speeds for the various Supply Pods.  Smaller the pod, the faster.
 - Add: Supply Pod V
 - Mod: Saben no longer waste attacks on Isolationists.
 - Fix: Stealing planets no longer resets "defenders".
 - Fix: Better checking on lack of resource damage.
 - Mod: Added more spy statistics.
 - Mod: Rescued Comrades have same cooldown as rescuer.

3.0898:
 - Mod: The Dillon Forge can now take a quantity of plans for splitting.
 - Fix: GG & Terra Platforms ignore University Level.