@@ -2,6 +2,14 @@
  - Mod: Gratch now more granualar for infiltration times when damaged
  - Mod: If planet is abandoned, spies from elsewhere will be set to Idle when ported home.
  - Fix: Removed any possibility of inter-alliance voting.
+ - API: map/get_stars is no longer supported. use map/get_star_map instead
+ - API: map/get_star_map changed to show alliance influence, not station
+ - Mod: Space Stations influence is now automatic
+ - Mod: Stars are now held by the Alliance, not the Space Station
+ - Mod: Enemy Space Stations can 'negate' influence on a star
+ - Mod: Stars with at least 50% net influence are automatically seized
+ - Mod: A new alliance influence map is created daily.
+ - Mod: Influence and range of an SS is now affected by building damage.
 
 3.0904:
  - Fix: Removed cronic duplication in starmap API, hopefully reducing lag
